--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
+    background-color: aliceblue;
 }
 
 h1, h2 {
@@ -30,7 +31,7 @@ h1, h2 {
 #stack-container {
     width: 100%;
     height: 300px;
-    border: 2px solid #000;
+    border: 2px solid #333;
     position: relative;
 }
 
@@ -48,4 +49,5 @@ h1, h2 {
     line-height: 50px;
     color: #fff;
     font-weight: bold;
+    border-top: 2px solid #333;
 }
