--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,25 @@ h1, h2 {
 #code-input {
     width: 100%;
     height: 200px;
+    box-sizing: border-box;
+    resize: vertical;
+    line-height: 14px;
 }
 
-#run-code {
+#code-highlight {
+    position: absolute;
+    pointer-events: none;
+    background-color: rgba(0, 255, 0, 0.25);
+}
+
+mark {
+    background-color: #aaff00;
+}
+
+#button-container button {
     margin-top: 10px;
-    width: 100%;
+    margin-left: 5px;
+    width: 250px;
     padding: 10px;
 }
 
@@ -32,15 +46,12 @@ h1, h2 {
     width: 100%;
     height: 300px;
     border: 2px solid #333;
-    position: relative;
+    display: flex;
 }
 
 .stack-element {
     width: 100%;
     height: 50px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .stack-element span {
@@ -50,4 +61,43 @@ h1, h2 {
     color: #fff;
     font-weight: bold;
     border-top: 2px solid #333;
+}
+
+#button-container {
+    display: flex;
+    justify-content: end;
+}
+
+.stack-elements {
+    display: flex;
+    align-items: end;
+    border-bottom: 2px solid #333;
+    width: 100%;
+    height: 100%;
+}
+
+.stack {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    border: 2px solid #333;
+    margin: 5px;
+    min-width: 100px;
+    flex-grow: 1;
+}
+
+.stack-label {
+    font-size: 18px;
+    padding: 5px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 15px;
+    border-top: 1px solid black;
 }
