--- a/styles.css
+++ b/styles.css
@@ -43,14 +43,6 @@ h1, h2 {
     width: 45%;
 }
 
-#code-input {
-    width: 100%;
-    height: 200px;
-    box-sizing: border-box;
-    resize: vertical;
-    line-height: 14px;
-}
-
 #code-highlight {
     position: absolute;
     pointer-events: none;
@@ -185,6 +177,16 @@ mark {
     height: 200px;
     font-family: monospace;
     padding-top: 5px;
+    min-height: 243px;
+}
+
+#editor-mode-group {
+    margin-top: 10px;
+    width: 100%;
+}
+
+#editor-mode-group button {
+    padding: 10px;
 }
 
 #run-buttons {
@@ -192,9 +194,8 @@ mark {
     width: 100%;
 }
 
-#run-buttons button {
-    padding: 13px 10px 10px;
-    width: 50%;
+#run-buttons label {
+    padding: 10px;
 }
 
 .read-only-line {
@@ -250,30 +251,39 @@ footer {
     border-top: 1px solid black;
 }
 
-#button-container {
-    display: flex;
-    justify-content: end;
-}
-
-.stack-elements {
-    display: flex;
-    align-items: end;
-    border-bottom: 2px solid #333;
+#line-input {
     width: 100%;
-    height: 100%;
+    min-height: 214.333px;
+    padding-top: 5px;
+    font-family: monospace;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    /* mimic the styling of bootstrap textarea with form-control class and in a form-floating container */
 }
 
-.stack-label {
-    font-size: 18px;
-    padding: 5px;
-    font-family: 'Courier New', Courier, monospace;
+#ran-code {
+    background-color: #f8f9fa; /* Match Bootstrap's light background */
+    border-bottom: 1px solid #ced4da; /* Visually separate the read-only line */
+    font-family: monospace; /* Match code styling */
+    color: #495057; /* Bootstrap default text color */
+    padding: 0.375rem 0.75rem; /* Match the padding of the textarea */
+    padding-top: 1.625rem;
+    border-radius: 0.375rem 0.375rem 0 0;
+    pointer-events: none; /* Make it completely non-interactive */
+    min-height: 58px;
+    height: auto;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 15px;
-    border-top: 1px solid black;
+#last-line {
+    width: 100%;
+    border-radius: 0;
+    background-color: #f8f9fa; /* Match Bootstrap's light background */
+    border-bottom: 1px solid #ced4da; /* Visually separate the read-only line */
+    font-family: monospace; /* Match code styling */
+    color: #495057; /* Bootstrap default text color */
+    padding: 0.375rem 0.75rem; /* Match the padding of the textarea */
+    pointer-events: none; /* Make it completely non-interactive */
+    height: auto;
+    min-height: 38px;
 }
